[gd_scene load_steps=4 format=3 uid="uid://cx9m2n5h7k3lp"]

[ext_resource type="Script" path="res://scripts/interactables/mystery_box.gd" id="1_box"]

[sub_resource type="BoxShape3D" id="BoxShape3D_box"]
size = Vector3(2, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_box"]
size = Vector3(2, 1, 1)

[node name="MysteryBox" type="Area3D" groups=["interactables"]]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_box")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_box")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_box")

[node name="Lid" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.4)
mesh = SubResource("BoxMesh_box")

[node name="WeaponDisplay" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0.6)
text = "Mystery Box"
font_size = 36

[node name="QuestionMark" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0.51)
text = "?"
font_size = 72
modulate = Color(1, 0.84, 0, 1)

[node name="Light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
light_color = Color(1, 0.84, 0, 1)
light_energy = 3.0
omni_range = 5.0

[node name="CycleTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = false

[node name="GrabTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="timeout" from="CycleTimer" to="." method="_on_cycle_timer_timeout"]
[connection signal="timeout" from="GrabTimer" to="." method="_on_grab_timer_timeout"]
